# rust-engine-app

./: .gitignore  LICENSE  README.md
sfcore-ai/: .env  Cargo.toml  server_config.toml  test_server.js
sfcore-ai/.cargo/: config.toml
sfcore-ai/crates/adapters/src/: lib.rs
sfcore-ai/crates/cli/: Cargo.toml
sfcore-ai/crates/cli/src/: main.rs
sfcore-ai/crates/engine/: Cargo.toml
sfcore-ai/crates/engine/src/: lib.rs  llama_engine.rs
sfcore-ai/crates/localcached-cli/: Cargo.toml  spec-ratatui.md
sfcore-ai/crates/localcached-cli/src/: app.rs  event.rs  main.rs  theme.rs  ui.rs
sfcore-ai/crates/localcached-client/: Cargo.toml
sfcore-ai/crates/localcached-client/src/: lib.rs
sfcore-ai/crates/localcached-proto/: Cargo.toml
sfcore-ai/crates/localcached-proto/src/: error.rs  key.rs  lib.rs  payload.rs  stats.rs  types.rs
sfcore-ai/crates/localcached-server/: Cargo.toml
sfcore-ai/crates/localcached-server/src/: config.rs  framing.rs  main.rs  metrics.rs  time.rs
sfcore-ai/crates/localcached-server/src/pubsub/: bus.rs  mod.rs
sfcore-ai/crates/localcached-server/src/server/: conn_kv.rs  conn_sub.rs  mod.rs
sfcore-ai/crates/localcached-server/src/store/: entry.rs  eviction.rs  kv.rs  mod.rs
sfcore-ai/crates/localcached-server/src/sys/: meminfo.rs  mod.rs
sfcore-ai/crates/patched/llama-cpp-sys-2/: .cargo_vcs_info.json  Cargo.toml  build.rs
sfcore-ai/crates/rag-api-server/: .env  .env.example  Cargo.toml  README.md  check_output.txt  check_output_2.txt  package-lock.json
sfcore-ai/crates/rag-api-server/config/: settings.toml  settings_local.toml.bak
sfcore-ai/crates/rag-api-server/docs/: 1.initialSetup.md  10.Fix-ProblemCircular.md  11.Fix-ProblemCircular.md  12.DOC-uPDATE.MD  13.Payload-Json-Allowed.md  2.ImplementCode.md  3.Deployment.md  4.Enhancement.md  5.MEMORY WITH DYNAMIC SYSTEM CONTEXT.md  6.IMPLEMENTATION - CONVERSATION MEMORY SYSTEM-1.md  7.PART-2.md  8.PART-3.md  9.DIAGRAM FLOW LENGKAP UNTUK DOKUMENTASI.md  API_SPEC.md  DEPLOYMENT_GUIDE_WINDOWS.md  OptimizeCode.md
sfcore-ai/crates/rag-api-server/docs/Helpers/: Oprimize-Performance.md
sfcore-ai/crates/rag-api-server/docs/Optimize/: Final-Manager.md  New-Optimize.md  New-Requirement.md  Paln-Optimize.md  planner call.md
sfcore-ai/crates/rag-api-server/docs/POC-AwareQuestion/: 1.Guide.md  EXECUTIVE_SUMMARY.md  INTEGRATION_GUIDE.md  NEW-UPDATE.md  add_auto_summary_migration.sql  context_builder_updated.rs  document_service_updated.rs  manager_execute_retrieval_patch.rs  manager_trait_patch.rs  models_extended.rs  rag_service_trait_patch.rs  repository_extended.rs  types_extended.rs
sfcore-ai/crates/rag-api-server/docs/SchemaTable/: rag_table.md
sfcore-ai/crates/rag-api-server/docs/UserManual/: ProsesUpload.md
sfcore-ai/crates/rag-api-server/logs/: rag-server.log.2026-01-27  rag-server.log.2026-01-28
sfcore-ai/crates/rag-api-server/src/: lib.rs  main.rs  state.rs
sfcore-ai/crates/rag-api-server/src/auth/: jwt.rs  middleware.rs  mod.rs  models.rs
sfcore-ai/crates/rag-api-server/src/config/: settings.rs
sfcore-ai/crates/rag-api-server/src/database/: mod.rs  models.rs  pool.rs  repository.rs
sfcore-ai/crates/rag-api-server/src/document/: chunker.rs  mod.rs  parser.rs
sfcore-ai/crates/rag-api-server/src/handlers/: chat.rs  gemini.rs  health.rs  mod.rs  search.rs  upload.rs
sfcore-ai/crates/rag-api-server/src/logging/: logger.rs  mod.rs  types.rs
sfcore-ai/crates/rag-api-server/src/models/: chat.rs  mod.rs
sfcore-ai/crates/rag-api-server/src/security/: authorization.rs  header_validator.rs  ip_whitelist.rs  middleware.rs  mod.rs
sfcore-ai/crates/rag-api-server/src/services/: document_service.rs  embedding_service.rs  event_bus.rs  gemini.rs  gemini_document.rs  llm_service.rs  mod.rs  query_analyzer.rs  rag_service.rs
sfcore-ai/crates/rag-api-server/src/test/: integration_test.rs
sfcore-ai/crates/rag-api-server/src/utils/: error.rs  limiters.rs  mod.rs  similarity.rs  token_estimator.rs
sfcore-ai/crates/rag-embedding-worker/: .env.example  Cargo.toml  README.md
sfcore-ai/crates/rag-embedding-worker/config/: settings.toml
sfcore-ai/crates/rag-embedding-worker/docs/: 1.enhancement&Dblayer.md  2.Embedding.md  3. WORKER_LAYER .md  4.Deployment.md  InitialSetup.md
sfcore-ai/crates/rag-embedding-worker/src/: lib.rs  main.rs
sfcore-ai/crates/rag-embedding-worker/src/config/: settings.rs
sfcore-ai/crates/rag-embedding-worker/src/database/: listener.rs  mod.rs  models.rs  pool.rs  repository.rs
sfcore-ai/crates/rag-embedding-worker/src/document/: chunker.rs  loader.rs  mod.rs  parser.rs
sfcore-ai/crates/rag-embedding-worker/src/embedding/: llama_server.rs  mod.rs  provider.rs
sfcore-ai/crates/rag-embedding-worker/src/utils/: error.rs  logger.rs  metrics.rs  mod.rs
sfcore-ai/crates/server/: Cargo.toml
sfcore-ai/crates/server/src/: handler.rs  main.rs
sfcore-ai/crates/sfcore-agent-app/: Cargo.toml
sfcore-ai/crates/sfcore-agent-app/src/: app.rs  assets.rs  events.rs  main.rs  theme.rs  ui_helpers.rs
sfcore-ai/crates/sso-api/: Cargo.toml
sfcore-ai/crates/sso-api/src/: lib.rs  response.rs  state.rs
sfcore-ai/crates/sso-core/: Cargo.toml
sfcore-ai/crates/sso-core/docs/: 1.Arsitektur Pattern.md
sfcore-ai/crates/sso-core/src/: error.rs  lib.rs
sfcore-ai/crates/sso-infrastructure/: Cargo.toml
sfcore-ai/crates/sso-infrastructure/src/: lib.rs
sfcore-ai/crates/sso-security/: Cargo.toml
sfcore-ai/crates/sso-security/src/: csrf.rs  jwt.rs  lib.rs  password.rs  session.rs
sfcore-ai/crates/sso-shared/: Cargo.toml
sfcore-ai/crates/sso-shared/src/: config.rs  constants.rs  error.rs  lib.rs  telemetry.rs  types.rs  utils.rs
sfcore-ai/sfcore-client-app/sso-client-app/: index.html  package-lock.json  package.json  tailwind.config.js
sfcore-ai/sfcore-client-app/sso-client-app/public/: landing.html
sfcore-ai/sfcore-client-app/sso-client-app/src/: App.tsx  main.tsx
sfcore-ai/sfcore-client-app/sso-server/: .env  Cargo.toml
sfcore-ai/sfcore-client-app/sso-server/src/: main.rs
sfcore-ai/sfcore-client-app/sso-server/static/: login.html
(+246 files in other folders)
