[workspace]
members = [
    "crates/engine",
    "crates/cli",
    "crates/server",
    "crates/localcached-proto",
    "crates/localcached-server",
    "crates/localcached-client",
    "crates/localcached-cli",
    "crates/sfcore-agent-app",
]
resolver = "2"

[patch.crates-io]
llama-cpp-sys-2 = { path = "crates/patched/llama-cpp-sys-2" }

# Release profile untuk optimasi performa (Performance Improvement doc)
[profile.release]
lto = true
codegen-units = 1
opt-level = 3    # Changed from "z" (size) to 3 (speed) for better streaming performance
panic = "abort"
strip = true

