[workspace]
members = [
    # Existing AI/Inference Crates
    # "crates/engine",
    # "crates/cli",
    # "crates/server",
    # "crates/localcached-proto",
    # "crates/localcached-server",
    # "crates/localcached-client",
    # "crates/localcached-cli",
    # "crates/sfcore-agent-app",

    # SSO Fullstack Rust Crates
    # "crates/sso-core",
    # "crates/sso-infrastructure",
    # "crates/sso-api",
    # "crates/sso-security",
    # "crates/sso-shared",
    
    # SSO Application
    # "sfcore-client-app/sso-server",

    # RAG Worker
    #"crates/rag-embedding-worker",
    
    # RAG API Server
    "crates/rag-api-server",
]
resolver = "2"

#[patch.crates-io]
#llama-cpp-sys-2 = { path = "crates/patched/llama-cpp-sys-2" }

# ============================================================================
# SSO Workspace Dependencies
# ============================================================================

[workspace.dependencies]
# Web Framework
axum = { version = "0.8", features = ["macros", "multipart", "ws"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "compression-gzip", "trace", "timeout", "request-id", "fs"] }
hyper = { version = "1.1", features = ["full"] }

# Async Runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "macros",
    "json"
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Security & Authentication
jsonwebtoken = { version = "10.2", features = ["aws_lc_rs"] }
oauth2 = "5.0"
argon2 = { version = "0.5", features = ["std"] }
bcrypt = "0.18"
rand = "0.9"
uuid = { version = "1.6", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"

# Validation
validator = { version = "0.20", features = ["derive"] }
email_address = "0.2"

# Caching
redis = { version = "1.0", features = ["tokio-comp", "connection-manager", "cluster"] }
deadpool-redis = "0.22"

# Configuration
config = "0.15"
dotenvy = "0.15"

# Error Handling
thiserror = "2.0"
anyhow = "1.0"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Date & Time
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"

# HTTP Client
reqwest = { version = "0.13", features = ["json", "rustls-tls"] }

# Password strength checker
zxcvbn = "3.1"

# Rate Limiting
governor = "0.10"

# Testing
mockall = "0.14"
fake = { version = "4.4", features = ["derive", "chrono", "uuid"] }
wiremock = "0.6"

# Email
lettre = { version = "0.11", features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }

# Templating (for email templates)
handlebars = "6.0"

# Regex
regex = "1.10"

# IP Address
ipnetwork = "0.21"

# Metrics
prometheus = "0.14"

# Internal SSO crates
# sso-core = { path = "crates/sso-core" }
# sso-infrastructure = { path = "crates/sso-infrastructure" }
# sso-api = { path = "crates/sso-api" }
# sso-security = { path = "crates/sso-security" }
# sso-shared = { path = "crates/sso-shared" }

# ============================================================================
# Build Profiles
# ============================================================================

# Release profile untuk optimasi performa (Performance Improvement doc)
[profile.release]
lto = true
codegen-units = 1
opt-level = 3    # Changed from "z" (size) to 3 (speed) for better streaming performance
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 1
