[package]
name = "localcached-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "localcached-cli"
path = "src/main.rs"

[dependencies]
localcached-client = { path = "../localcached-client" }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }

# Ratatui TUI
ratatui = "0.29"
crossterm = "0.28"
color-eyre = "0.6"
