[package]
name = "rag-api-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros", "multipart"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }

# Async runtime
tokio = { version = "1.42", features = ["full"] }
futures = "0.3"

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "chrono",
    "json",
    "uuid"
] }
pgvector = { version = "0.4", features = ["sqlx"] }

# HTTP client (llama-server)
reqwest = { version = "0.12", features = ["json", "stream"] }

# Auth & Security
jsonwebtoken = "9.3"
argon2 = "0.5"
rand = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Document processing (Code reuse/port)
lopdf = "0.35"
docx-rs = "0.4"
pulldown-cmark = "0.12"
scraper = "0.21"
encoding_rs = "0.8"
text-splitter = { version = "0.18", features = ["tiktoken-rs"] }
calamine = "0.24" # Excel (xlsx, xls)
quick-xml = "0.36" # XML parsing for pptx
zip = "2.2" # Reading zip files (pptx structure)
rtf-parser = "0.3" # RTF support

# Utils
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
config = "0.14"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
bytes = "1.9"
mime_guess = "2.0"
async-trait = "0.1"
once_cell = "1.20"

# Missing deps added
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.21"
async-stream = "0.3"
ipnetwork = "0.20"
notify = "6.1"


[dev-dependencies]
mockall = "0.13"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
