[package]
name = "rag-embedding-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "chrono",
    "json"
] }
pgvector = { version = "0.4", features = ["sqlx"] }

# HTTP Client (for llama-server)
reqwest = { version = "0.12", features = ["json", "stream"] }

# Document parsing
lopdf = "0.35"
docx-rs = "0.4"
pulldown-cmark = "0.12"
scraper = "0.21"
encoding_rs = "0.8"

# Text processing & chunking
text-splitter = { version = "0.18", features = ["tiktoken-rs"] }
unicode-segmentation = "1.12"
regex = "1.11"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
async-trait = "0.1"
once_cell = "1.20"
walkdir = "2.5"
mime_guess = "2.0"
sha2 = "0.10"
bytes = "1.9"

# Process management
sysinfo = "0.33"

[dev-dependencies]
mockall = "0.13"
tokio-test = "0.4"
tempfile = "3.14"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 1

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"
