[package]
name = "sfcore-ai-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
clap = { version = "4.0", features = ["derive"] }

# Internal dependencies
sfcore-ai-engine = { path = "../engine" }

# Allocator (optional but recommended for performance)
tikv-jemallocator = "0.5"
toml = "0.9.11"
