[package]
name = "sfcore-agent-app"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.29"
eframe = { version = "0.29", features = ["default_fonts"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "macros",
] }
argon2 = "0.5"
bcrypt = "0.16"
rand = "0.8"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15"
image = { version = "0.25", default-features = false, features = [
    "png",
    "ico",
] }
serde_json = "1.0.149"
toml = "0.9.11"
libc = "0.2.180"
async-trait = "0.1.89"
chrono = "0.4.43"
