[package]
name = "sso-core"
version = "0.1.0"
edition = "2021"
authors = ["SFCore Indonesia"]
license = "MIT"

[dependencies]
sso-shared.workspace = true
sso-security.workspace = true

# Async
async-trait.workspace = true
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Types
uuid.workspace = true
chrono.workspace = true

# Error
thiserror.workspace = true

# Validation
validator.workspace = true

# Tracing
tracing.workspace = true

[dev-dependencies]
mockall.workspace = true

