[package]
name = "sso-infrastructure"
version = "0.1.0"
edition = "2021"
authors = ["SFCore Indonesia"]
license = "MIT"

[dependencies]
sso-shared.workspace = true
sso-core.workspace = true

# Database
sqlx.workspace = true

# Cache
redis.workspace = true
deadpool-redis.workspace = true

# Async
async-trait.workspace = true
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Types
uuid.workspace = true
chrono.workspace = true

# Error
thiserror.workspace = true
anyhow.workspace = true

# Tracing
tracing.workspace = true

[dev-dependencies]
mockall.workspace = true
