[package]
name = "sso-security"
version = "0.1.0"
edition = "2021"
authors = ["SFCore Indonesia"]
license = "MIT"

[dependencies]
sso-shared.workspace = true

# Security
jsonwebtoken.workspace = true
argon2.workspace = true
bcrypt.workspace = true
rand.workspace = true
sha2.workspace = true
hex.workspace = true

# Types
uuid.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true

# Async
async-trait.workspace = true
tokio.workspace = true

# Error
thiserror.workspace = true

# Validation
zxcvbn.workspace = true

[dev-dependencies]
mockall.workspace = true
