[package]
name = "sso-shared"
version = "0.1.0"
edition = "2021"
authors = ["SFCore Indonesia"]
license = "MIT"

[dependencies]
# Serialization
serde.workspace = true
serde_json.workspace = true

# Types
uuid.workspace = true
chrono.workspace = true

# Error Handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true

# Configuration
config.workspace = true
dotenvy.workspace = true

# Validation
validator.workspace = true

[dev-dependencies]
mockall.workspace = true
