[package]
name = "sso-server"
version = "0.1.0"
edition = "2021"
authors = ["SFCore Indonesia"]
license = "MIT"

[[bin]]
name = "sso-server"
path = "src/main.rs"

[dependencies]
sso-shared.workspace = true
sso-core.workspace = true
sso-security.workspace = true
sso-infrastructure.workspace = true
sso-api.workspace = true

# Web Framework
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
hyper.workspace = true

# Async
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Configuration
config.workspace = true
dotenvy.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Error
anyhow.workspace = true

[dev-dependencies]
mockall.workspace = true
